{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "KeyboardAndMouse",
            "id": "b61fb882-6f72-4ee3-b79e-a81a15330406",
            "actions": [
                {
                    "name": "MoveCursor",
                    "type": "PassThrough",
                    "id": "5696908d-2fec-4f2f-8893-5f114eb2a08b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Sell",
                    "type": "Value",
                    "id": "6b46166b-1764-40a9-a591-707f4a492d9e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RefreshShop",
                    "type": "Value",
                    "id": "7f7d283a-ed0c-4a8b-92e0-2a88174cee92",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "F In Chat",
                    "type": "Value",
                    "id": "ef1e330d-439a-4e3f-aebd-693768535897",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Left Click",
                    "type": "PassThrough",
                    "id": "baf7751f-fa32-495f-9e6c-5bc311432840",
                    "expectedControlType": "Integer",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Right Click",
                    "type": "PassThrough",
                    "id": "e491f393-b31d-4eb7-94a2-5d099cec9be3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4d562dff-cfbe-4045-a12e-40a04aa24c95",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveCursor",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "65f867f4-88c9-44d4-8066-8d36a57d6471",
                    "path": "<Keyboard>/e",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "Sell",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d8f55b3c-d666-42dd-86d4-8d80eaeda6ad",
                    "path": "<Keyboard>/d",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "RefreshShop",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ae28dff8-6067-4faa-8641-5cd8f812c303",
                    "path": "<Keyboard>/f",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "F In Chat",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7732557c-e7d4-4d41-8467-e96b70c4a23f",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "Left Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c0391858-0030-4edf-8fd6-3872173eefb2",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "Right Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}